@@ -1829,7 +1829,7 @@ ACCMSGS=OFF
 #    DBERRORQUE, DBERRORQUESTART, MAXNEWPERIP, MAXCONNSPERACCOUNT,
 #    RESPAWNTHREAD, ELECTRICTHREAD, MSDP, GMCP, ALL_AGEING, MCP, 
 #    CHANNELBACKLOGS, ANSIPROMPT, HYGIENE, SPECOMBATTHREAD, FOODROT,
-#    CHANNELAUCTION
+#    CHANNELAUCTION, LANGUAGES
 #
 # The default value is COMMAND_POSE, which disables the pose command, 
 #    along with QUITREASON and RETIREREASON, which are useless.
